# Kinect-3D-Scanner

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  arucokeypointdetector.cpp  arucokeypointdetector.h  calibrationinterface.cpp  calibrationinterface.h  configs.ini  icpregistration.cpp  icpregistration.h  imagesviewerwidget.cpp  imagesviewerwidget.h  keypointsrejection.cpp  keypointsrejection.h  main.cpp  openniinterface.cpp  openniinterface.h  pcdfilters.cpp  pcdfilters.h  pcdvizualizer.cpp  pcdvizualizer.h  pclio.cpp  pclio.h  reconstructioninterface.cpp  reconstructioninterface.h  resource.h  sacregistration.cpp  sacregistration.h  sampleconsensusdistancefilter.cpp  scaner.ini  scannerbase.cpp  scannerbase.h  scannerwidget.cpp  scannerwidget.h  surfkeypointdetector.cpp  surfkeypointdetector.h  tools.cpp  tools.h  types.h  (+2 more)
cmake/: OpenCVConfig.cmake  OpenNi2Config.cmake  arucoConfig.cmake  aruco_config.cmake  cmake_config.cmake  cpu_tsdf_config.cmake  grouping.cmake  room_scanner_config.cmake  vcpkg_install.cmake
default_project/: project.ini
default_project/calibration/: Thumbs.db  camera_matrix.xml  camera_params.yml  dist_coef.xml  hrm_dict.yml  hrm_dict_40_3x3.yml
include/core/base/: scannerbase.h  types.h
include/core/base/imp/: scannerbase.cpp
include/core/keypoints/: arucokeypointdetector.h  keypointsdetector.hpp  keypointsrejection.h  surfkeypointdetector.h
include/core/keypoints/imp/: arucokeypointdetector.cpp  keypointsrejection.cpp  surfkeypointdetector.cpp
include/core/reconstruction/: reconstructioninterface.h  volumereconstruction.h
include/core/reconstruction/imp/: reconstructioninterface.cpp  volumereconstruction.cpp
include/core/registration/: correction.hpp  edgebalancer.hpp  edgebasedregistration.hpp  elchcorrection.h  errormetric.hpp  icpregistration.h  linearbasedregistration.hpp  linearregistration.hpp  lumcorrection.h  middlebasedregistration.hpp  parallelregistration.hpp  pclgicp.hpp  registration.hpp  registrationalgorithm.hpp  sacregistration.h
include/core/registration/imp/: elchcorrection.cpp  icpregistration.cpp  lumcorrection.cpp  sacregistration.cpp
include/deprecated/: pcl_openni_qt_kinect_3d_scanner.h  sampleconsensusdistancefilter.h
include/deprecated/imp/: pcl_openni_qt_kinect_3d_scanner.cpp  sampleconsensusdistancefilter.cpp
include/gui/: imagesviewerwidget.h  pcdvizualizer.h  scannerwidget.h
include/gui/imp/: imagesviewerwidget.cpp  pcdvizualizer.cpp  scannerwidget.cpp
include/io/: calibrationinterface.h  openniinterface.h  pcdinputiterator.hpp  pclio.h
include/io/imp/: calibrationinterface.cpp  openniinterface.cpp  pclio.cpp
include/utility/: pcdfilters.h
include/utility/imp/: pcdfilters.cpp  tools.cpp
src/core/base/: scannertypes.h
src/core/base/imp/: scannerbase.cpp
src/core/keypoints/: arucokeypointdetector.h  keypointsdetector.hpp  keypointsrejection.h  surfkeypointdetector.h
src/core/keypoints/imp/: surfkeypointdetector.cpp
src/core/reconstruction/: reconstructioninterface.h  volumereconstruction.h
src/core/reconstruction/imp/: reconstructioninterface.cpp  volumereconstruction.cpp
src/core/registration/: correction.hpp  edgebalancer.hpp  edgebasedregistration.hpp  elchcorrection.h  errormetric.hpp  icpregistration.h  lumcorrection.h  pclgicp.hpp  registration.hpp  registrationalgorithm.hpp  sacregistration.h
src/core/registration/imp/: elchcorrection.cpp  icpregistration.cpp  lumcorrection.cpp  sacregistration.cpp
src/gui/: pcdvizualizer.h
src/gui/imp/: imagesviewerwidget.cpp  pcdvizualizer.cpp
src/io/: calibrationinterface.h  openniinterface.h  pcdinputiterator.hpp  pclio.h
src/io/imp/: calibrationinterface.cpp  openniinterface.cpp
src/utility/: pcdfilters.h  tools.h
src/utility/imp/: pcdfilters.cpp
